# sad

./: .gitconfig  .gitignore  LICENSE  Makefile  Makefile.am  README.md  SADpipe.py  SADpipe.sh  configure.ac  dev.mk  install-dependencies.sh  install.sh
archived/: TransCovDist.cpp
data/GEUVADIS/: Metadata.txt  getdata.sh
data/HumanBodyMap/: HumanBodyMap_SraRunTable.txt  getdata.sh
m4/: gurobi.m4  python3.m4
scripts/: AdjustPValue.py  ExtractPCAnnotation.py  FindSADpredinAssembly.py  GroupTruthExp.py  PlotDisttributionTrans.py  Pred_Trans2Gene.py  RunRealGEUDAVIS.sh  RunRealHumanBodyMap.sh  RunSimulation.sh  SADpipe.py  Simulation.py  SimulationReads.R  TranscriptClass.py  plot_coverage.py  preparing_data.sh
src/: AssemblyPost.cpp  CategorizeSimulation.cpp  DistTest.cpp  DistTest.hpp  IO.cpp  IO.hpp  LPReassign.cpp  LPReassign.hpp  RSEMobs.cpp  ReadRSEMBias.cpp  ReadSalmonBias.cpp  TransCovDist.cpp  Transcript.cpp  Transcript.hpp  logtime.hpp  main.cpp  massert.hpp  spline.h
